--- a/update/index.html.twig
+++ b/update/index.html.twig
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/c3.min.css"/>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css?1588250816278" />
-	<link rel="stylesheet" type="text/css" href="css/map.css?1588250816278" />
+	<link rel="stylesheet" type="text/css" href="css/style.css?1589788165138" />
+	<link rel="stylesheet" type="text/css" href="css/map.css?1589788165138" />
 	<link rel="stylesheet" type="text/css" href="css/ion.rangeSlider.css" />
 	<style>
 	.c3-area {
@@ -532,10 +532,10 @@
 var controller = new ScrollMagic.Controller();
 var smallWindow = $( window ).width() < 600;
 </script>
-<script src="js/map.js?1588250816278"></script>
-<script src="js/mapCH.js?1588250816278"></script>
-<script src="js/animatedBarChartRelative.js?1588250816278"></script>
-<script src="js/multiLineChart.js?1588250816278"></script>
+<script src="js/map.js?1589788165138"></script>
+<script src="js/mapCH.js?1589788165138"></script>
+<script src="js/animatedBarChartRelative.js?1589788165138"></script>
+<script src="js/multiLineChart.js?1589788165138"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega@5/build/vega-core.min.js"></script>
 
 <script>
@@ -552,26 +552,30 @@ var timeLocale = {
 }
 d3.timeFormatDefaultLocale(timeLocale);
 
-var chartDailyCH = new multilineChart({'selector': '#chartDailyCH', 'file': 'data/ch-daily-cases.csv?1588250816278', 'timeScale': true, 'xTickFormat': "d", 'hideLabel': true, 'annotationSplitter': /\n/})
+var chartDailyCH = new multilineChart({'selector': '#chartDailyCH', 'file': 'data/ch-daily-cases.csv?1589788165138', 'timeScale': true, 'xTickFormat': "d", 'hideLabel': true, 'annotationSplitter': /\n/})
 
-var deathRate = new multilineChart({'selector': '#deathRate', 'file': 'data/excess-deaths.csv?1588250816278', 'timeScale': true, 'xTickFormat': "d", 'hideLabel': false, 'hasConfidenceInterval': true, 'xMin': true, 'straightLine': true})
+var deathRate = new multilineChart({'selector': '#deathRate', 'file': 'data/excess-deaths.csv?1589788165138', 'timeScale': true, 'xTickFormat': "d", 'hideLabel': false, 'hasConfidenceInterval': true, 'xMin': true, 'straightLine': true})
 
 
 new ScrollMagic.Scene({triggerElement: "#chartDailyCH", duration: 300})
 	.addTo(controller)
 	.on("enter", function(){
 
-		chartDailyCH.annotate("16 mars:\nmesures du \nConseil fédéral", {x: new Date('2020-03-16'), y: 731}, -40, -50);
+		chartDailyCH.annotate("16 mars:\nmesures du \nConseil fédéral", {x: new Date('2020-03-16'), y: 731}, -20, -70);
 
 		chartDailyCH.annotate("Creux durant\nles week-ends", {x: new Date('2020-03-29'), y: 606}, 0, 30);
 
-		chartDailyCH.annotate("Dernier jour: \ndonnées \nincomplètes", {x: new Date('2020-04-30'), y: 160}, 0, -100);
+		chartDailyCH.annotate("27 avril:\n1er assouplissement", {x: new Date('2020-04-27'), y: 175}, 0, -160);
+
+		chartDailyCH.annotate("Réouverture \ndes écoles", {x: new Date('2020-05-11'), y: 65}, 0, -120);
+
+		chartDailyCH.annotate("Dernier jour: \ndonnées \nincomplètes", {x: new Date('2020-05-18'), y: 65}, 0, -60);
 
 		// chartDailyCH.annotate("Interdiction des rassemblements de plus de 5 personnes", {x: new Date('2020-03-20'), y: 800}, -30, -50);
 
 });
 
-var chartMovingAvg = new multilineChart({'selector': '#chartMovingAvg', 'file': 'data/cases_timestamp_deaths.csv?1588250816278', 'timeScale': true, 'logScale': true, 'xTickFormat': "d", 'margin': { top: 40, bottom: 30, left: 42, right: 75 } });
+var chartMovingAvg = new multilineChart({'selector': '#chartMovingAvg', 'file': 'data/cases_timestamp_deaths.csv?1589788165138', 'timeScale': true, 'logScale': true, 'yMax': 10000, 'xTickFormat': "d", 'margin': { top: 40, bottom: 30, left: 52, right: 85 } });
 
 new ScrollMagic.Scene({triggerElement: "#chartMovingAvg", duration: 300})
 	.addTo(controller)
@@ -588,7 +592,7 @@ new ScrollMagic.Scene({triggerElement: "#chartMovingAvg", duration: 300})
 });
 
 /*
-var chartMovingAvgPop = new multilineChart({'selector': '#chartMovingAvgPop', 'file': 'data/cases_timestamp_3d.csv?1588250816278', 'timeScale': true, 'xTickFormat': "d"});
+var chartMovingAvgPop = new multilineChart({'selector': '#chartMovingAvgPop', 'file': 'data/cases_timestamp_3d.csv?1589788165138', 'timeScale': true, 'xTickFormat': "d"});
 
 new ScrollMagic.Scene({triggerElement: "#chartMovingAvgPop", duration: 300})
 	.addTo(controller)
@@ -597,9 +601,9 @@ new ScrollMagic.Scene({triggerElement: "#chartMovingAvgPop", duration: 300})
 		// chartMovingAvg.annotate("2000 décès en 24 heures", {x: new Date('2020-04-11'), y: 6}, -50, -50);
 });*/
 
-var chartCantons = new multilineChart({'selector': '#chartCantons', 'file': 'data/c3-cantons-switzerland.csv?1588250816278', 'timeScale': true, 'margin': { top: 40, bottom: 30, left: 40, right: 20 }});
+var chartCantons = new multilineChart({'selector': '#chartCantons', 'file': 'data/c3-cantons-switzerland.csv?1589788165138', 'timeScale': true, 'margin': { top: 40, bottom: 30, left: 40, right: 20 }});
 
-/*var chartAbsolute = new multilineChart({'selector': '#chartAbsolute', 'file': 'data/cases_timestamp.csv?1588250816278', 'timeScale': true, 'xTickFormat': ".2s"});
+/*var chartAbsolute = new multilineChart({'selector': '#chartAbsolute', 'file': 'data/cases_timestamp.csv?1589788165138', 'timeScale': true, 'xTickFormat': ".2s"});
 
 new ScrollMagic.Scene({triggerElement: "#chartAbsolute", duration: 300})
 	.addTo(controller)
@@ -616,7 +620,7 @@ new ScrollMagic.Scene({triggerElement: "#chartAbsolute", duration: 300})
 
 
 
-var chartDayOffset = new multilineChart({'selector': '#chartDayOffset', 'file': 'data/cases_per_pop_day0.csv?1588250816278'});
+var chartDayOffset = new multilineChart({'selector': '#chartDayOffset', 'file': 'data/cases_per_pop_day0.csv?1589788165138'});
 
 new ScrollMagic.Scene({triggerElement: "#chartDayOffset", duration: 300})
 	.addTo(controller)
@@ -630,7 +634,7 @@ new ScrollMagic.Scene({triggerElement: "#chartDayOffset", duration: 300})
 		chartDayOffset.annotate("Fin du dépistage systématique en Suisse", {x: 14, y: 185}, -5);
 });
 
-var chartDeath = new multilineChart({'selector': '#chartDeath', 'file': 'data/deaths_per_pop_day0.csv?1588250816278'});
+var chartDeath = new multilineChart({'selector': '#chartDeath', 'file': 'data/deaths_per_pop_day0.csv?1589788165138'});
 
 new ScrollMagic.Scene({triggerElement: "#chartDeath", duration: 300})
 	.addTo(controller)
