edit last update text

--- a/index.html.twig
+++ b/index.html.twig
@@ -41,7 +41,7 @@
 
 				<p class="lead">Les données sur la pandémie décryptées en infographies</p>
 
-				<p class="textUpdate" style="font-size: 14px; color: #7d7d7d;">Publié le 27 janvier 2020 – Modifié le {{lastModifiedDisplay}}</p>
+				<p class="textUpdate" style="font-size: 14px; color: #7d7d7d;">Publié le 27 janvier 2020 – Texte modifié le {{lastModifiedDisplay}}</p>
 
 				<div class="avertissement">
 					<h6>Actualisation en continu</h6>
