--- a/update/index.html.twig
+++ b/update/index.html.twig
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/c3.min.css"/>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css?1606224407703" />
-	<link rel="stylesheet" type="text/css" href="css/map.css?1606224407703" />
+	<link rel="stylesheet" type="text/css" href="css/style.css?1608632336849" />
+	<link rel="stylesheet" type="text/css" href="css/map.css?1608632336849" />
 	<link rel="stylesheet" type="text/css" href="css/ion.rangeSlider.css" />
 	<style>
 	.c3-area {
@@ -41,7 +41,7 @@
 
 				<p class="lead">Les données sur la pandémie décryptées en infographies</p>
 
-				<p class="textUpdate" style="font-size: 14px; color: #7d7d7d;">Publié le 27 janvier 2020 – Modifié le {{lastModifiedDisplay}}</p>
+				<p class="textUpdate" style="font-size: 14px; color: #7d7d7d;">Publié le 27 janvier 2020 – Texte modifié le {{lastModifiedDisplay}}</p>
 
 				<div class="avertissement">
 					<h6>Actualisation en continu</h6>
@@ -705,10 +705,10 @@
 var controller = new ScrollMagic.Controller();
 var smallWindow = $( window ).width() < 600;
 </script>
-<script src="js/map.js?1606224407703"></script>
-<script src="js/mapCH.js?1606224407703"></script>
-<!-- <script src="js/animatedBarChartRelative.js?1606224407703"></script> -->
-<script src="js/multiLineChart.js?1606224407703"></script>
+<script src="js/map.js?1608632336849"></script>
+<script src="js/mapCH.js?1608632336849"></script>
+<!-- <script src="js/animatedBarChartRelative.js?1608632336849"></script> -->
+<script src="js/multiLineChart.js?1608632336849"></script>
 
 <script>
 
